# ibtop

./: .pre-commit-config.yaml  Cargo.toml  README.md  ibtop  install.sh
.github/workflows/: ci.yml  release.yml
src/: history.rs  main.rs  metrics.rs  simulation.rs  types.rs  ui.rs
src/discovery/: fake.rs  mod.rs
