[package]
name = "ibtop"
version = "0.1.7"
edition = "2021"
authors = ["info@jannik-straube.de"]
description = "Real-time terminal monitor for InfiniBand networks"
readme = "README.md"
homepage = "https://github.com/JannikSt/ibtop"
repository = "https://github.com/JannikSt/ibtop"
license = "Apache-2.0"
keywords = ["infiniband", "monitoring", "tui", "network", "rdma"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hostname = "0.4"

[lints.clippy]
pedantic = "deny"